--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "firebase": "^11.3.0",
+    "firebase": "^10.13.0",
     "genkit": "^1.6.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
